--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
     <div class="wrapper">
       <!-- your code here! -->
+      <h1 class="zetsy">Zetsy</h1>
+      <img src="necklace.jpg" alt="necklace">
+      
     </div>
   </body>
 </html>
