Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <!-- your code here! -->
       <h1 class="zetsy">Zetsy</h1>
-      <img src="necklace.jpg" alt="necklace">
+      <img src="/images/necklace.jpg" alt="necklace">
 
     </div>
   </body>
