--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
   <body>
     <div class="wrapper">
       <!-- your code here! -->
-      <h1 class="zetsy">Zetsy</h1>
-      <img src="/images/necklace.jpg" alt="necklace">
+      <header class="zetsy">
+        <a href="#"> Zetsy</a>
+        <img src="/images/necklace.jpg" alt="necklace">
+        
+      </header>
+      
 
     </div>
   </body>
