--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <title>Zetsy - Handmade</title>
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.1/modernizr.min.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
   </head>
 
   <body>
     <div class="wrapper">
       <!-- your code here! -->
       <header class="zetsy">
-        <a href="#"> Zetsy</a>
+        <h1><a href="#"> Zetsy </a></h1>
         <img src="/images/necklace.jpg" alt="necklace">
 
       </header>
