--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <div class="wrapper">
       <!-- your code here! -->
-      <header class="zetsy">
-        <h1><a href="#"> Zetsy </a></h1>
+      <header >
+        <h1 class="zetsy"><a href="#"> Zetsy </a></h1>
         <img src="/images/necklace.jpg" alt="necklace">
 
       </header>
