Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Zetsy - Handmade</title>
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.1/modernizr.min.js"></script>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
@@ -14,7 +14,6 @@
       <header >
         <h1 class="zetsy"><a href="#"> Zetsy </a></h1>
         <img src="/images/necklace.jpg" alt="necklace">
-
       </header>
 
 
