--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   <body>
     <div class="wrapper">
       <!-- your code here! -->
-      <header >
-        <h1 class="zetsy"><a href="#"> Zetsy </a></h1>
+      <header>
+        <h1 class="zetsy color"><a href="#"> Zetsy </a></h1>
         <img src="/images/necklace.jpg" alt="necklace">
       </header>
+      <h3 class="color">About</h3>
 
 
     </div>
