--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
       <!-- your code here! -->
       <header>
-        <h1 class="color"><a href="#"> Zetsy </a></h1>
+        <h1 class="zetsy"><a href="#"> Zetsy </a></h1>
         <img src="/images/necklace.jpg" alt="necklace">
       </header>
       <h1 class="color">About</h1>
