Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
         Press
       </p>
 
+      <div class="images">
+        <img src="/images/bergdorf-logo.jpg" alt="bergdorf-logo">
+        <img src="/images/nmai-logo.jpg" alt="nmai-logo">
+        <img src="/images/sedona-logo.jpg" alt="sedona-logo">
+        <img src="/images/times-logo.jpg" alt="times-logo">
+      </div>
+        
 
     </div>
   </body>
