Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       </p>
 
       <div class="images">
-        <img src="/images/bergdorf-logo.jpg" alt="bergdorf-logo">
-        <img src="/images/nmai-logo.jpg" alt="nmai-logo">
-        <img src="/images/sedona-logo.jpg" alt="sedona-logo">
-        <img src="/images/times-logo.jpg" alt="times-logo">
+        <img src="/images/bergdorf-logo.ong" alt="bergdorf-logo">
+        <img src="/images/nmai-logo.png" alt="nmai-logo">
+        <img src="/images/sedona-logo.png" alt="sedona-logo">
+        <img src="/images/times-logo.png" alt="times-logo">
       </div>
 
 
