--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </p>
 
       <div class="images">
-        <img src="/images/bergdorf-logo.ong" alt="bergdorf-logo">
+        <img src="/images/bergdorf-logo.png" alt="bergdorf-logo">
         <img src="/images/nmai-logo.png" alt="nmai-logo">
         <img src="/images/sedona-logo.png" alt="sedona-logo">
         <img src="/images/times-logo.png" alt="times-logo">
