Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <img src="/images/times-logo.png" alt="times-logo">
       </div>
 
+      <summary>© 2014 Zetsy, All Rights Reserved.</summary>
 
     </div>
   </body>
